--- a/TicketsService/appsettings.Production.json
+++ b/TicketsService/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mysql-tproject-prod-noruae-001.mysql.database.azure.com; Port=3306; Database=bus-routes_schema; Uid=routes_superman@mysql-tproject-prod-noruae-001; Pwd=xytpyg-revkEb-xewhu0; SslMode=Preferred;"
+    "DefaultConnection": "Server=mysql-tproject-prod-noruae-001.mysql.database.azure.com; Port=3306; Database=tickets_schema; Uid=routes_superman@mysql-tproject-prod-noruae-001; Pwd=xytpyg-revkEb-xewhu0; SslMode=Preferred;"
   },
   "AppSettings": {
     "Host": "http://vmtproject.uaenorth.cloudapp.azure.com"
